Archive2/70/b0dc8951bfa7ec/output
main.cpp:6:16: error: no type named 'type' in 'struct std::enable_if<false, void>'
 using Z = X<int>;
                ^
main.cpp:6:16: note: invalid template non-type parameter
